small corrections and adjusting dark mode button so it works...

--- a/style.css
+++ b/style.css
@@ -139,24 +139,23 @@ footer {
     section {
         padding: 50px 20px;
     }
-    /* for dark mode */
-.dark-mode{
-    background-color:#111;
-    color:white;
-    .dark-mode header{
-    background:#1d1d1d;
+   /* for dark mode */
+.dark-mode {
+    background-color: #111;
+    color: white;
 }
-.dark-mode section{
-    background:#222;
+.dark-mode header {
+    background: #1d1d1d;
 }
-.dark-mode footer{
-    background:#1d1d1d;
+.dark-mode section {
+    background: #222;
 }
-.dark-mode a{
-    color:#f5b8da;
-    .dark-mode .gallery-item{
-    background:#2a2a2a;
+.dark-mode footer {
+    background: #1d1d1d;
 }
+.dark-mode a {
+    color: #f5b8da;
 }
-}
+.dark-mode .gallery-item {
+    background: #2a2a2a;
 }
